--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 .lefthero{
     height: 100%;
-    width: 33%;
+    width: 40%;
     position:relative;
     overflow: hidden; /* makes the photo stretch to the bottom */
 }
@@ -181,18 +181,16 @@ label{
     text-shadow: 1px 1px 2px #E5E7EB;
 }
 
-input{
+.inputform input{
     font-size: medium;
     width: 250px;
     height: 25px;
     box-shadow: 1px 1px 2px #E5E7EB;
 }
 
-.bottom{
-    margin: 20px;
-}
 
-.bottom > button{
+
+.bottom > form > input{
     color: white;
     font-size: medium;
     background-color:#596D48 ;
@@ -203,7 +201,7 @@ input{
     box-shadow: 1px 1px 2px #8b8d91;
 }
 
-.bottom > button:hover{
+.bottom > form > input:hover{
     background-color:#475837;
     cursor:pointer;
     
@@ -212,4 +210,8 @@ input{
 .bottom > div> a{
     color: #596D48;
     font-weight: bold;
+}
+
+.bottom > div{
+    margin-left: 20px;
 }
